Tx-history alignment issues fixed.

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -138,6 +138,7 @@ footer,
             text-align: center;
 
             .q-toolbar-title {
+                font-family: "Poppins-SemiBold";
                 font-size: 16px;
                 line-height: 48px;
                 font-weight: 300;
